What we do page is ready to review

--- a/whatwedo.html
+++ b/whatwedo.html
@@ -69,39 +69,41 @@
             </div>
         </nav>
 
-        <div class="header-content container text-white">
-            <div class="row">
-                <div class='col-md-6'>
-                    <p class="text-white fw-bold">What we do</p>
-                    <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
-                        Problem solvers
-                        <br />
-                        Process fixers
-                    </h2>
+        <div class="header-content text-white">
+            <div class="container">
+                <div class="row">
+                    <div class='col-md-6'>
+                        <p class="text-white fw-bold mb-2">What we do</p>
+                        <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
+                            Problem solvers
+                            <br />
+                            Process fixers
+                        </h2>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Section Header end  -->
     <!-- Section details start  -->
-    <section class="py-4 py-md-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-5">
+    <section class="whatwedo-section-1 px-3">
+        <div class="container mb-4">
+            <div class="row ">
+                <div class="col-12 col-lg-5">
                     <h2 class="fw-bold text-blue">
                         We are business
-                        <br class="d-xs-block d-md-none" />
+                        <br class="d-none d-md-block" />
                         process consultants
                         <br class="d-xs-none d-md-block" />
                         specialising in SMEs.
                     </h2>
                 </div>
-                <div class="col-12 col-md-7">
-                    <p class="text-blue mb-0">
+                <div class="col-12 col-lg-7">
+                    <p class="text-blue mb-4">
                         Our consultancy uncovers the issues that are slowing your process and resolves
                         them with sofware solutions.
                     </p>
-                    <p class="text-blue mb-0">
+                    <p class="text-blue mb-4">
                         We believe in the power of technology to transform your business - but we don't in using
                         technology for technology's sake.
                     </p>
@@ -113,13 +115,13 @@
                 </div>
             </div>
         </div>
-        <div class="container d-none d-lg-block mt-5">
+        <div class="container d-none d-lg-block">
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="card rounded-0">
                         <img src="./assets/Icon images/Systems_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-blue">
+                            <h5 class="card-title text-blue mb-0">
                                 Getting your software systems to talk to each other
                             </h5>
                         </div>
@@ -129,7 +131,7 @@
                     <div class="card rounded-0">
                         <img src="./assets/Icon images/Building_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-blue">
+                            <h5 class="card-title text-blue mb-0">
                                 Building sortware that suits your business
                             </h5>
                         </div>
@@ -139,7 +141,7 @@
                     <div class="card rounded-0">
                         <img src="./assets/Icon images/Move_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-blue">When you need to move your data</h5>
+                            <h5 class="card-title text-blue mb-0">When you need to move your data</h5>
                         </div>
                     </div>
                 </div>
@@ -147,94 +149,94 @@
                     <div class="card rounded-0">
                         <img src="./assets/Icon images/Upgrade_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title text-blue">Making your current software good as new</h5>
+                            <h5 class="card-title text-blue mb-0">Making your current software good as new</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="bg-light-grey py-4 py-md-5 px-3">
-        <div class="container p-0">
-            <div class="row">
-                <div class="col-12 col-md-5 d-flex justify-content-center">
-                    <img src="./assets/Icon images/Systems_icon.png" alt="system" class="software-icon">
+    <section class="whatwedo-section-2 bg-light-grey px-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-4 d-flex justify-content-center">
+                    <img src="./assets/Icon images/Systems_icon.png" alt="system" class="software-icon mb-4 mb-lg-0">
                 </div>
-                <div class="col-12 col-md-7">
+                <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
                         Getting your software systems to talk to each other
                     </h3>
-                    <p class="text-blue mb-0">
+                    <p class="text-blue mb-4">
                         Did you know that the average organisation uses a minimum of five software systems?
                         Software is integral to the way we do business, yet it can feel as though the systems are
                         slowing things down, not speeding them up. They just don't 'talk' to each other. The
                         technical team calls it systems alignment - but put simply it's your fast track to a more
                         successful business.
                     </p>
-                    <p class="text-blue mb-0">
+                    <p class="text-blue mb-4">
                         Getting software systems to talk to each other is as importent as getting people to
                         communicate properly. Better communication between your systems means fewer mistakes
                         and a faster, smoother workflow.
                     </p>
-                    <p class="text-blue mb-3">
+                    <p class="text-blue mb-4">
                         Plus, it frees up your people to work on more intresting things like the next brilliant idea.
                     </p>
-                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0">
+                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0 fw-bold py-3 px-5">
                         book a call
                     </button>
                 </div>
             </div>
         </div>
     </section>
-    <section class="py-4 py-md-5 px-3">
-        <div class="container p-0">
-            <div class="row">
-                <div class="col-12 col-md-5 d-flex justify-content-center">
-                    <img src="./assets/Icon images/Building_icon.png" alt="building" class="software-icon">
+    <section class="whatwedo-section-3 px-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-4 d-flex justify-content-center">
+                    <img src="./assets/Icon images/Building_icon.png" alt="building" class="software-icon mb-4 mb-lg-0">
                 </div>
                 <div class="col-12 col-md-7">
                     <h3 class="text-blue fw-bold mb-5">
                         Building software that suits your business
                     </h3>
-                    <p class="text-blue mb-0">
+                    <p class="text-blue mb-4">
                         We want to make your systems work hard for your budget, so we'll always look to see
                         what've already available on the market. But if the bes system for your business
                         doesn't exist yet, we will build it.
                     </p>
-                    <p class="text-blue mb-3">
+                    <p class="text-blue mb-4">
                         As leading software developers, we specialise in customised software solutions for our clients.
                         Our technical development team build bespoke applications that fit your business, and nobody
                         else's
                     </p>
-                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0">
+                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0 fw-bold py-3 px-5">
                         book a call
                     </button>
                 </div>
             </div>
         </div>
     </section>
-    <section class="bg-light-grey py-4 py-md-5 px-3">
-        <div class="container p-0">
-            <div class="row">
-                <div class="col-12 col-md-5 d-flex justify-content-center">
-                    <img src="./assets/Icon images/Move_icon.png" alt="move" class="software-icon">
+    <section class="whatwedo-section-4 bg-light-grey px-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-4 d-flex justify-content-center">
+                    <img src="./assets/Icon images/Move_icon.png" alt="move" class="software-icon mb-4 mb-lg-0">
                 </div>
-                <div class="col-12 col-md-7">
+                <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
                         When you need to move your data
                     </h3>
-                    <p class="text-blue mb-0">
+                    <p class="text-blue mb-4">
                         Whether it's your inhouse emails or your customes database, your data is your most
                         valuable asset. As your business grows, you will want to use your data for different purposes
                         or upgrade to a more sophisticates system.
                     </p>
-                    <p class="text-blue mb-3">
+                    <p class="text-blue mb-4">
                         When the time comes to move your data from one system to another - or
                         <span class="fw-bold text-decoration-underline">migrate it</span>)
                         as it is often known - you want to be certain that every record arrives in the same condition
                         that every record arrives in the same condition that it left - complete and uncorrupted
                     </p>
-                    <p class="text-blue mb-3">
+                    <p class="text-blue mb-4">
                         We have 20 years' experience in shifting data safely, so we know what we're doing. In addition,
                         if you wish,
                         <span class="fw-bold text-decoration-underline">
@@ -242,40 +244,42 @@
                         </span>
                         as we go.
                     </p>
-                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0">
+                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0 py-3 px-5 fw-bold">
                         book a call
                     </button>
                 </div>
             </div>
         </div>
     </section>
-    <section class="py-4 py-md-5 px-3">
-        <div class="container p-0">
-            <div class="row">
+    <section class="whatwedo-section-5 px-3">
+        <div class="container">
+            <div class="row justify-content-center">
                 <div class="col-12 col-md-5 d-flex justify-content-center">
-                    <img src="./assets/Icon images/Upgrade_icon.png" alt="Upgrade_icon" class="software-icon">
+                    <img src="./assets/Icon images/Upgrade_icon.png" alt="Upgrade_icon"
+                        class="software-icon mb-4 mb-lg-0">
                 </div>
                 <div class="col-12 col-md-7">
                     <h3 class="text-blue fw-bold mb-5">
                         Making your current software good as new
                     </h3>
-                    <p class="text-blue mb-3">
+                    <p class="text-blue mb-4">
                         If you need to update your existing system rather than invest in a brand new one,
                         we can refresh and rebuild it.
                     </p>
-                    <p class="text-blue mb-3">
+                    <p class="text-blue mb-4">
                         Many nice businesses have nice software, specially designed for their industry alone.
                         These applications may last for 20 years befor ther need replacing or upgrading -
                         by which time the developers may be long gone, and the next generation of software may
                         not yet be on the market.
                     </p>
-                    <p class="text-blue mb-5">
+                    <p class="text-blue mb-4">
                         We are industy experts in rebuilding Windows, web and mobile apps or moving
                         applications - and all their data - to the cloud. A full or partial rebuilding will
                         restore peak performance plus deliver software that fits your business like a glove.
                         Adding value and keeping you in the business for another 20 years
                     </p>
-                    <button class="btn d-block bg-orange text-white text-uppercase btn-book-call rounded-0">
+                    <button
+                        class="btn d-block bg-orange text-white text-uppercase btn-book-call rounded-0 fw-bold px-5 py-3">
                         book a call
                     </button>
                 </div>
@@ -284,7 +288,6 @@
     </section>
     <!-- Section details end  -->
 
-    <!-- Section Contact start -->
     <!-- Section Contact start -->
     <section class="section-contact px-3">
         <div class="container">
