--- a/career.html
+++ b/career.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./assets/Icon images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
@@ -27,7 +27,7 @@
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
                 </a>
-                <a href="#" class="text-decoration-none text-light-blue ms-4 d-flex align-items-center">
+                <a href="#" class="text-decoration-none text-light-blue ms-4 d-flex align-items-center fw-bold">
                     Follow us on:
                     <img class="linkedin-icon ms-2" src="./assets/Icon images/Linkedin_icon.png" alt="message-icon">
                 </a>
@@ -39,8 +39,8 @@
     <section class="career-header px-3">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
-            <div class="container p-0">
-                <a class="navbar-brand" href="home.html">
+            <div class="container">
+                <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
                 <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
@@ -49,20 +49,19 @@
                     <span class="navbar-toggler-icon "></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-uppercase active text-white" aria-current="page"
-                                href="whatwedo.html">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
+                        <li class="nav-item px-lg-2">
+                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
