--- a/whyus.html
+++ b/whyus.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./assets/Icon images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="page-top d-none d-lg-block container-fluid bg-dark-blue py-2">
+    <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
         <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
             <div class="page-top-social d-flex align-items-center">
@@ -27,7 +27,7 @@
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
                 </a>
-                <a href="#" class="text-decoration-none text-light-blue ms-4 d-flex align-items-center">
+                <a href="#" class="text-decoration-none text-light-blue ms-4 d-flex align-items-center fw-bold">
                     Follow us on:
                     <img class="linkedin-icon ms-2" src="./assets/Icon images/Linkedin_icon.png" alt="message-icon">
                 </a>
