What we do page is ready to review

--- a/whatwedo.html
+++ b/whatwedo.html
@@ -99,15 +99,15 @@
                     </h2>
                 </div>
                 <div class="col-12 col-lg-7">
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         Our consultancy uncovers the issues that are slowing your process and resolves
                         them with sofware solutions.
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         We believe in the power of technology to transform your business - but we don't in using
                         technology for technology's sake.
                     </p>
-                    <p class="text-blue mb-0">
+                    <p class="text-blue mb-0 fw-light">
                         What we recommend will work - whether the solution is buying a system already on the market,
                         building a bespoke app or rebuilding (embedded links to services) what you already have.
                         Because SMEs deserve systems that work brillintly today and will work even better tomorrow.
@@ -166,19 +166,19 @@
                     <h3 class="text-blue fw-bold mb-5">
                         Getting your software systems to talk to each other
                     </h3>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         Did you know that the average organisation uses a minimum of five software systems?
                         Software is integral to the way we do business, yet it can feel as though the systems are
                         slowing things down, not speeding them up. They just don't 'talk' to each other. The
                         technical team calls it systems alignment - but put simply it's your fast track to a more
                         successful business.
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         Getting software systems to talk to each other is as importent as getting people to
                         communicate properly. Better communication between your systems means fewer mistakes
                         and a faster, smoother workflow.
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         Plus, it frees up your people to work on more intresting things like the next brilliant idea.
                     </p>
                     <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0 fw-bold py-3 px-5">
@@ -198,12 +198,12 @@
                     <h3 class="text-blue fw-bold mb-5">
                         Building software that suits your business
                     </h3>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         We want to make your systems work hard for your budget, so we'll always look to see
                         what've already available on the market. But if the bes system for your business
                         doesn't exist yet, we will build it.
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         As leading software developers, we specialise in customised software solutions for our clients.
                         Our technical development team build bespoke applications that fit your business, and nobody
                         else's
@@ -225,18 +225,18 @@
                     <h3 class="text-blue fw-bold mb-5">
                         When you need to move your data
                     </h3>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         Whether it's your inhouse emails or your customes database, your data is your most
                         valuable asset. As your business grows, you will want to use your data for different purposes
                         or upgrade to a more sophisticates system.
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         When the time comes to move your data from one system to another - or
                         <span class="fw-bold text-decoration-underline">migrate it</span>)
                         as it is often known - you want to be certain that every record arrives in the same condition
                         that every record arrives in the same condition that it left - complete and uncorrupted
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         We have 20 years' experience in shifting data safely, so we know what we're doing. In addition,
                         if you wish,
                         <span class="fw-bold text-decoration-underline">
