--- a/whatwedo.html
+++ b/whatwedo.html
@@ -254,11 +254,11 @@
     <section class="whatwedo-section-5 px-3">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-12 col-md-5 d-flex justify-content-center">
+                <div class="col-12 col-lg-4 d-flex justify-content-center">
                     <img src="./assets/Icon images/Upgrade_icon.png" alt="Upgrade_icon"
                         class="software-icon mb-4 mb-lg-0">
                 </div>
-                <div class="col-12 col-md-7">
+                <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
                         Making your current software good as new
                     </h3>
