Home page is ready to review

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="home-header px-3">
+    <section class="home-header px-4 px-lg-0">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
             <div class="container">
@@ -46,7 +46,7 @@
                 <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                    <i class="fas fa-bars px-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
@@ -69,29 +69,31 @@
             </div>
         </nav>
 
-        <div class="header-content container text-white px-2">
-            <div class="row">
-                <div class='col-12 col-md-6'>
-                    <h1 class="header-content-heading lh-1 fw-bold mb-3 mb-lg-4">
-                        Get the best
-                        <br class="d-block d-lg-none" />
-                        out of
-                        <br class="d-none d-lg-block" />
-                        your
-                        <br class="d-block d-lg-none" />
-                        business
-                    </h1>
-                    <h5 class="mb-1">Geidans Solutions</h5>
-                    <h5>Now You Can.</h5>
-                    <div class="mt-4 d-none d-lg-block">
-                        <button
-                            class="btn header-content-btn with-border text-uppercase text-white fw-bold rounded-0 me-3 py-2">
-                            our services
-                        </button>
-                        <button
-                            class="btn header-content-btn text-uppercase bg-orange text-white fw-bolder rounded-0 py-2">
-                            talk to us
-                        </button>
+        <div class="header-content text-white">
+            <div class="container">
+                <div class="row">
+                    <div class='col-12 col-md-6'>
+                        <h1 class="header-content-heading lh-1 fw-bold mb-3 mb-lg-4">
+                            Get the best
+                            <br class="d-block d-lg-none" />
+                            out of
+                            <br class="d-none d-lg-block" />
+                            your
+                            <br class="d-block d-lg-none" />
+                            business
+                        </h1>
+                        <h5 class="mb-1">Geidans Solutions</h5>
+                        <h5>Now You Can.</h5>
+                        <div class="mt-4 d-none d-lg-block">
+                            <button
+                                class="btn header-content-btn border-grey text-uppercase text-white fw-bold rounded-0 me-3 py-2">
+                                our services
+                            </button>
+                            <button
+                                class="btn header-content-btn text-uppercase bg-orange text-white fw-bolder rounded-0 py-2">
+                                talk to us
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -99,7 +101,7 @@
     </section>
     <!-- Section Header end  -->
     <!-- Section Problem Solver start  -->
-    <section class="section-problem-solver px-3">
+    <section class="section-problem-solver px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 text-left pe-lg-0 mb-4">
@@ -131,10 +133,11 @@
                         <span class="d-block mt-4 mt-lg-2">And win.</span>
                     </p>
                     <div class="mt-4 d-block d-md-none">
-                        <button class="btn with-border text-uppercase text-blue fw-bold w-100 mb-3 rounded-0">
+                        <button
+                            class="btn border-blue text-uppercase text-blue fw-bold w-100 mb-3 rounded-0 px-3 py-3 lh-1">
                             our services
                         </button>
-                        <button class="btn text-uppercase bg-orange text-white fw-bold w-100 rounded-0">
+                        <button class="btn text-uppercase bg-orange text-white fw-bold w-100 rounded-0 py-3 lh-1">
                             talk to us
                         </button>
                     </div>
@@ -144,7 +147,7 @@
     </section>
     <!-- Section Problem Solver end  -->
     <!-- Section Review start -->
-    <section class="section-review px-3 bg-orange">
+    <section class="section-review px-4 px-lg-0 bg-orange">
         <div class="container">
             <div class="fw-bold text-white d-flex align-items-top mb-4">
                 <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
@@ -174,7 +177,7 @@
     <!-- Section Review end -->
 
     <!-- Section Why us start  -->
-    <section class="section-whyus px-3 bg-light-grey">
+    <section class="section-whyus px-4 px-lg-0 bg-light-grey">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 text-left mb-3 mb-md-0 pe-lg-0">
@@ -202,7 +205,7 @@
                     </p>
 
                     <button
-                        class="btn bg-blue text-white fw-bolder text-uppercase d-none d-md-block px-5 py-3 rounded-0">
+                        class="btn btn-whyus bg-blue text-white fw-bolder text-uppercase d-none d-md-block px-5 py-3 rounded-0">
                         that's why us
                     </button>
                 </div>
@@ -212,18 +215,19 @@
     <!-- Section Why us end -->
 
     <!-- Section Geidans-help start -->
-    <section class="section-help px-4">
+    <section class="section-help px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 mx-auto">
-                    <h2 class="text-orange text-center text-lg-start fw-bold mb-5">How we can help</h2>
+                    <h2 class="section-help-title text-orange text-center text-lg-start fw-bold mb-5">How we can help
+                    </h2>
                 </div>
             </div>
             <div class="row mb-4 mb-md-5">
                 <div class="col-lg-9 mx-auto d-flex flex-column align-items-center flex-md-row">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Systems_icon.png" alt="systems-icon">
                     <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-bolder lh-1 text-blue mt-2 mt-lg-0 mb-4">
+                        <h2 class="fw-bolder section-help-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
                             Getting your software systems to talk each other
                         </h2>
                         <p class="text-blue d-none d-md-block mb-3">
@@ -238,7 +242,7 @@
                 <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Building_icon.png" alt="systems-icon">
                     <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-bolder lh-1 text-blue mt-2 mt-lg-0 mb-4">
+                        <h2 class="fw-bolder section-help-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
                             Building software that suits your business
                         </h2>
                         <p class="text-blue d-none d-md-block mb-3">
@@ -253,7 +257,8 @@
                 <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Move_icon.png" alt="systems-icon">
                     <div class="section-help-detail text-center text-md-start ">
-                        <h2 class="fw-bolder lh-1 text-blue mt-2 mt-lg-0 mb-4">What you need to move your data</h2>
+                        <h2 class="fw-bolder section-help-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">What you need to
+                            move your data</h2>
                         <p class="text-blue d-none d-md-block mb-3">
                             we have 20 years' experience in shifting data safely
                             so we know what we're doing.
@@ -266,7 +271,8 @@
                 <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Upgrade_icon.png" alt="systems-icon">
                     <div class="section-help-detail">
-                        <h2 class="fw-bolder lh-1 text-blue text-center text-md-start mt-2 mt-lg-0">
+                        <h2
+                            class="fw-bolder section-help-heading lh-1 text-blue text-center text-md-start mt-2 mt-lg-0">
                             Making current software good as new
                         </h2>
                         <p class="text-blue d-none d-md-block mb-3">
@@ -283,7 +289,7 @@
 
 
     <!-- Section Solutions start  -->
-    <section class="section-solution px-3">
+    <section class="section-solution px-4 px-lg-0">
         <div class="container">
             <div class="row d-none d-md-flex">
                 <div class="col-12 col-lg-4 d-flex flex-row flex-lg-column">
@@ -327,7 +333,7 @@
     <!-- Section Solutions end -->
 
     <!-- Section Contact start -->
-    <section class="section-contact px-3">
+    <section class="section-contact px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
@@ -340,7 +346,7 @@
                     </h3>
                 </div>
                 <div class="col-md-7 d-block d-lg-none">
-                    <h3 class="text-blue mb-0 ">
+                    <h3 class="text-blue mb-1">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-blue fw-bolder lh-1 mb-0">
@@ -354,7 +360,7 @@
     <!-- Section Contact end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-5 px-3 px-lg-0">
+    <footer class="footer bg-blue py-5 px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
@@ -402,7 +408,7 @@
     <!-- Footer end -->
 
     <!-- Section Copyright start -->
-    <div class="footer-copyright px-3 px-md-0 pt-4 py-lg-3  bg-dark-blue">
+    <div class="footer-copyright px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
