--- a/whatwedo.html
+++ b/whatwedo.html
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
-                    <img src="./assets/Icon images/Systems_icon.png" alt="system" class="software-icon mb-4 mb-lg-0">
+                    <img src="./assets/Icon images/system.PNG" alt="system" class="software-icon mb-4 mb-lg-0">
                 </div>
                 <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
