--- a/home.html
+++ b/home.html
@@ -292,13 +292,13 @@
     <section class="section-solution px-4 px-lg-0">
         <div class="container">
             <div class="row d-none d-md-flex">
-                <div class="col-12 col-lg-4 d-flex flex-row flex-lg-column mb-3">
+                <div class="col-12 col-lg-4 d-flex flex-row flex-lg-column mb-5 mb-lg-0">
                     <h3 class="text-orange fw-bolder me-2 mb-0">Dynamic.</h3>
                     <h3 class="text-orange fw-bolder me-2 mb-0">Flexible.</h3>
                     <h3 class="text-orange fw-bolder mb-0">Fast.</h3>
                 </div>
                 <div class="col-12 col-lg-7 d-none d-lg-block">
-                    <h3 class="fw-bolder text-white mb-5 mb-lg-0">
+                    <h3 class="fw-bolder text-white mb-3 ">
                         At Geidans Solutions, we have over 20
                         years' experience in soling the process issues that hold many SMEs
                         back from achieving real growth
@@ -309,7 +309,7 @@
                     </h3>
                 </div>
                 <div class="col-12 col-lg-7 d-block d-lg-none">
-                    <h3 class="fw-light text-white mb-5 mb-lg-0">
+                    <h3 class="fw-light text-white mb-3">
                         At Geidans Solutions, we have over 20
                         years' experience in soling the process issues that hold many SMEs
                         back from achieving real growth
