Home page is ready to review

--- a/home.html
+++ b/home.html
@@ -114,19 +114,20 @@
                         <br class="d-none d-md-block">
                         owner, you've come a long way fast
                     </h4>
-                    <p class="text-blue mb-5 mb-lg-4">
+                    <p class="text-blue mb-5 mb-lg-4 fw-light">
                         You're poised for a success. You've invested time, money and
                         effort in people, technology and systems to increase efficiency.
                     </p>
                     <h4 class="text-orange fw-bolder mb-2">So why isn't the business performing?</h4>
-                    <p class="text-blue mb-4 mb-lg-2">Geidans Solutions are problem solvers and process fixers for SMEs
+                    <p class="text-blue mb-4 mb-lg-2 fw-light">Geidans Solutions are problem solvers and process fixers
+                        for SMEs
                     </p>
-                    <p class="text-blue mb-4 mb-lg-2">
+                    <p class="text-blue mb-4 mb-lg-2 fw-light">
                         We believe in empowering SMEs by impoving how they work.
                         The reward to you is growth. The reward to us is making that happen for you.
                         If it's thinkable, it's possible.
                     </p>
-                    <p class="text-blue">
+                    <p class="text-blue fw-light">
                         If your business processes are holding you back from what
                         you could achieve - we can help you take on the big boys
 
@@ -190,15 +191,15 @@
                         Why Us?
                     </h4>
                     <p class="text-orange d-block d-lg-none fw-bolder mb-3">Why us?</p>
-                    <p class="text-blue mb-0 mb-lg-3">
+                    <p class="text-blue mb-0 mb-lg-3 fw-light">
                         We believe if you control your processes, you control your business.
                     </p>
-                    <p class="text-blue mb-3">
+                    <p class="text-blue mb-3 fw-light">
                         We streamline your systems, optimise your processes, in-crease your efficiency
                         increase your efficiency. Putting you back in control. And we just happen to do it
                         through powerful technology and software.
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-4 fw-light">
                         Every Geidans Solutions project has shown a positive ROI
                         Within the first 12 months. You see tangible benefits
                         to your bottom line fast.
@@ -348,7 +349,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
-                    <h3 class="text-blue fw-bold mb-3 ">
+                    <h3 class="text-blue fw-bold mb-3">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-white fw-bolder lh-1 mb-0">
@@ -357,7 +358,7 @@
                     </h3>
                 </div>
                 <div class="col-md-7 d-block d-lg-none">
-                    <h3 class="text-blue mb-1">
+                    <h3 class="text-blue mb-2">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-blue fw-bolder lh-1 mb-0">
